2003-01-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for gswitchit
	in 2.1-extras.

2003-01-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved gswitchit to 2.1-extras.

2003-01-13  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: GTK+ 2.2 has been branched. Reflect this.

2003-01-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved seahorse to 2.1-extras.

2003-01-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnomechat to 2.1-extras.

2003-01-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for gal in
	2.1-fifth-toe.

2003-01-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added fontilus to 2.1-extras.

2003-01-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch info for gnome-panel
	in 2.1-core.

2003-01-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnomeradio has moved to gnome cvs.
	Changed reference accordingly.

2003-01-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved gcompris to 2.1-extras.

2002-12-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added epiphany to 2.1-fifth-toe.

2002-12-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-pkgview to 2.1-extras.

2002-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch info for gconf-editor in
	2.1-core.

2002-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for evolution in
	2.1-extras.

2002-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pot file name for gcm in
	2.1-extras.

2002-12-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gcalctool to 2.1-extras.

2002-12-15  Christian Neumair  <chris@gnome-de.org>
