@@ -2172,6 +2172,17 @@
       </component>
     </version>
   </module>
+  <module name="gtetrinet">
+    <version release="gnome-2.1-extras">
+      <component name="gtetrinet" dir="gtetrinet">
+	<podir dir="po"/>
+	<potname name="gtetrinet.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gtk+">
     <version release="gnome-1.4-core">
       <component name="gtk+" dir="gtk+">
