@@ -1,3 +1,7 @@
+2003-01-18  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gtetrinet to 2.1-extras.
+
 2003-01-16  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed pot file name for gswitchit
